--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="nav__logo">
           <a href="#" class="logo">CodeApex</a>
         </div>
-        <div class="nav__menu__btn" id="menu-btn">
+        <div class="nav__menu__btn" id="menu-btn">b
           <i class="ri-menu-line"></i>
         </div>
       </div>
@@ -128,7 +128,9 @@
         <div class="product__card">
           <h4>Java</h4>
           <p>Souce codes</p>
+          <a href="#" id="whatsapp-btn">
           <img src="assets/javap.png" alt="product" />
+        </a>
         </div>
         <div class="product__card">
           <h4>HTML & CSS</h4>
